fix data location issues

--- a/notebooks/01-aws-question-answering-rag.ipynb
+++ b/notebooks/01-aws-question-answering-rag.ipynb
@@ -76,33 +76,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "80f98aef-1586-4ecf-a715-faff4007a013",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading package lists... Done\n",
-      "Building dependency tree... Done\n",
-      "Reading state information... Done\n",
-      "unzip is already the newest version (6.0-26+deb11u1).\n",
-      "0 upgraded, 0 newly installed, 0 to remove and 0 not upgraded.\n",
-      "unzip:  cannot find or open data_clean.zip, data_clean.zip.zip or data_clean.zip.ZIP.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Unzip the file\n",
-    "!apt install unzip\n",
-    "!unzip -q data_clean.zip "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "57aa4ada-a686-43de-bc90-0f4107f95ce1",
    "metadata": {},
@@ -112,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "90b71850-cf8d-4232-866e-53f7a8a685e5",
    "metadata": {
     "tags": []
@@ -122,7 +95,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution - (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yyaml (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution - (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yyaml (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -133,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6139ec9e-962f-44b4-94c1-9a778e4d2be4",
    "metadata": {
     "tags": []
@@ -143,7 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution - (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yyaml (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution - (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yyaml (/Users/thandavm/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[31mERROR: Cannot uninstall 'PyYAML'. It is a distutils installed project and thus we cannot accurately determine which files belong to it which would lead to only a partial uninstall.\u001b[0m\u001b[31m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -154,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "faf12933-564a-41a3-9a9e-c02a9437310e",
    "metadata": {
     "tags": []
@@ -176,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "81eea5f6-50e3-4398-80eb-11b680d026b4",
    "metadata": {
     "tags": []
@@ -200,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fcddd51c-9251-4428-9931-b2700a71142a",
    "metadata": {
     "tags": []
@@ -210,75 +194,6 @@
     "logger = logging.getLogger('sagemaker')\n",
     "logger.setLevel(logging.DEBUG)\n",
     "logger.addHandler(logging.StreamHandler())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a81f78f-675d-4009-9228-8fa3cfc559b8",
-   "metadata": {},
-   "source": [
-    "##### Log versions of dependencies "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "75474334-8b19-4491-abb9-58468bc33329",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using requests==2.31.0\n",
-      "Using pyyaml==6.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "logger.info(f'Using requests=={requests.__version__}')\n",
-    "logger.info(f'Using pyyaml=={yaml.__version__}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c52e3b3f-f770-4b90-bc35-12cc0f793604",
-   "metadata": {},
-   "source": [
-    "#### Setup essentials"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a25a24c9-b504-45a0-888d-fe507b34402d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "TEXT_EMBEDDING_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-textembedding-gpt-j-6b-fp16'\n",
-    "TEXT_GENERATION_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-llm-falcon-7b-instruct-bf16'\n",
-    "\n",
-    "REGION_NAME = boto3.session.Session().region_name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15360977-8631-4a21-a599-b91c91c8c893",
-   "metadata": {},
-   "source": [
-    "#### Encode passages (chunks) using JumpStart's GPT-J text embedding model . We are specifically using only 1 of 20 textbooks from the dataset. It takes about 6 minutes to generate embeddings for one textbook (for example, Pathology). You can increase the number of textbooks indexed by adding sufficient time buffer for execution. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b75ed59e-7553-4e57-af5e-29d345a00028",
-   "metadata": {},
-   "source": [
-    "In order to follow the RAG approach this notebook is using the LangChain framework where it has integrations with different services and tools that allow efficient building of patterns such as RAG. "
    ]
   },
   {
@@ -310,6 +225,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a81f78f-675d-4009-9228-8fa3cfc559b8",
+   "metadata": {},
+   "source": [
+    "##### Log versions of dependencies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "75474334-8b19-4491-abb9-58468bc33329",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using requests==2.31.0\n",
+      "Using pyyaml==6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(f'Using requests=={requests.__version__}')\n",
+    "logger.info(f'Using pyyaml=={yaml.__version__}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c52e3b3f-f770-4b90-bc35-12cc0f793604",
+   "metadata": {},
+   "source": [
+    "#### Setup essentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a25a24c9-b504-45a0-888d-fe507b34402d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "TEXT_EMBEDDING_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-textembedding-gpt-j-6b-fp16'\n",
+    "TEXT_GENERATION_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-llm-falcon-7b-instruct-bf16'\n",
+    "\n",
+    "REGION_NAME = boto3.session.Session().region_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15360977-8631-4a21-a599-b91c91c8c893",
+   "metadata": {},
+   "source": [
+    "#### Encode passages (chunks) using JumpStart's GPT-J text embedding model . We are specifically using only 1 of 20 textbooks from the dataset. It takes about 6 minutes to generate embeddings for one textbook (for example, Pathology). You can increase the number of textbooks indexed by adding sufficient time buffer for execution. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b75ed59e-7553-4e57-af5e-29d345a00028",
+   "metadata": {},
+   "source": [
+    "In order to follow the RAG approach this notebook is using the LangChain framework where it has integrations with different services and tools that allow efficient building of patterns such as RAG. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "1ad7c4b7-c6bd-40c2-b91e-0d6370fce251",
@@ -324,7 +308,7 @@
     "from langchain.document_loaders import DirectoryLoader, TextLoader\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "\n",
-    "loader = PyPDFLoader(\"data/AWS_Well-Architected_Framework.pdf\")\n",
+    "loader = PyPDFLoader(\"../data/AWS_Well-Architected_Framework.pdf\")\n",
     "\n",
     "#loader = DirectoryLoader(\"./data/\", glob=\"*.pdf\", loader_cls=PDFLoader)\n",
     "\n",
@@ -1430,9 +1414,9 @@
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science 3.0)",
+   "display_name": "base",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1444,7 +1428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
