updated to fix pip module installation dependencies

--- a/notebooks/03-aws-qna-langchain-rag.ipynb
+++ b/notebooks/03-aws-qna-langchain-rag.ipynb
@@ -42,15 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "tags": []
    },
    "outputs": [
@@ -60,21 +53,33 @@
      "text": [
       "\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
       "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install --upgrade sagemaker --quiet\n",
-    "!pip install ipywidgets==7.0.0 --quiet\n",
-    "!pip install langchain --quiet #==0.0.148 --quiet\n",
-    "!pip install faiss-cpu --quiet"
+    "%pip install faiss-cpu==1.7.4 --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mDEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install langchain==0.0.222 --quiet"
    ]
   },
   {
@@ -185,11 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-09-20 22:31:56.487236\n",
+      "JumpStartModel: {'_model_data_is_set': False, 'model_id': 'huggingface-text2text-flan-t5-xxl-bnb-int8', 'model_version': '*', 'instance_type': 'ml.g5.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'sagemaker_session': <sagemaker.session.Session object at 0x7f24a8518b20>, 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.1.2/infer-prepack-huggingface-text2text-flan-t5-xxl-bnb-int8.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-inference:1.13.1-transformers4.26.0-gpu-py39-cu117-ubuntu20.04', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-text2text-flan-t5-xxl-bnb-int8-2023-09-20-22-31-57-085', 'role': 'arn:aws:iam::512234253331:role/template-SageMakerExecutionRole-VMLFzEgLKi6r', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
+      "--------------!\u001b[1mModel huggingface-text2text-flan-t5-xxl-bnb-int8 has been deployed successfully.\u001b[0m\n",
+      "\n",
+      "2023-09-20 22:39:30.432804\n",
+      "JumpStartModel: {'_model_data_is_set': False, 'model_id': 'huggingface-textembedding-gpt-j-6b-fp16', 'model_version': '*', 'instance_type': 'ml.g5.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'sagemaker_session': <sagemaker.session.Session object at 0x7f24a8518b20>, 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.0.1/infer-prepack-huggingface-textembedding-gpt-j-6b-fp16.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/pytorch-inference:1.12.0-gpu-py38', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-textembedding-gpt-j-6b-fp16-2023-09-20-22-39-30-532', 'role': 'arn:aws:iam::512234253331:role/template-SageMakerExecutionRole-VMLFzEgLKi6r', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
+      "-----------!\u001b[1mModel huggingface-textembedding-gpt-j-6b-fp16 has been deployed successfully.\u001b[0m\n",
+      "\n",
+      "2023-09-20 22:45:33.769922\n"
+     ]
+    }
+   ],
    "source": [
     "newline, bold, unbold = \"\\n\", \"\\033[1m\", \"\\033[0m\"\n",
     "import datetime\n",
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -220,7 +241,7 @@
        "'TEST code to see default instance types\\nfrom sagemaker import instance_types\\nfor model_id in _MODEL_CONFIG_:\\n    instance_type = instance_types.retrieve_default(\\n        model_id=model_id,\\n        model_version=model_version,\\n        scope=\"inference\")\\n    print(\"Model ID\" + model_id )\\n    print(instance_type) '"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For model: huggingface-text2text-flan-t5-xxl-bnb-int8, the generated output is: SageMaker 5.2 and higher\n",
+      "For model: huggingface-text2text-flan-t5-xxl-bnb-int8, the generated output is: Managed Spot Training in SageMaker is available for production instances only and is not available for preview instances. The Managed Spot Training feature is available only in production instances. For more information, see Managing Spot Training in the Developer Center.\n",
       "\n"
      ]
     }
@@ -927,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -935,10 +956,10 @@
     {
      "data": {
       "text/plain": [
-       "<langchain.vectorstores.faiss.FAISS at 0x7f6f75ee75b0>"
+       "<langchain.vectorstores.faiss.FAISS at 0x7f249cb2b910>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -960,10 +981,10 @@
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(vectorstore=<langchain.vectorstores.faiss.FAISS object at 0x7f6f75ee75b0>, search_type='similarity', search_kwargs={})"
+       "VectorStoreRetriever(vectorstore=<langchain.vectorstores.faiss.FAISS object at 0x7f249cb2b910>, search_type='similarity', search_kwargs={})"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -982,10 +1003,10 @@
     {
      "data": {
       "text/plain": [
-       "SagemakerEndpointEmbeddingsJumpStart(client=<botocore.client.SageMakerRuntime object at 0x7f6f81625c70>, endpoint_name='jumpstart-example-raglc-huggingface-tex-2023-09-17-21-16-11-206', region_name='us-east-1', credentials_profile_name=None, content_handler=<__main__.ContentHandler object at 0x7f6f80bf90a0>, model_kwargs=None, endpoint_kwargs=None)"
+       "SagemakerEndpointEmbeddingsJumpStart(client=<botocore.client.SageMakerRuntime object at 0x7f24a11ecfa0>, endpoint_name='jumpstart-example-raglc-huggingface-tex-2023-09-20-22-39-30-634', region_name='us-east-1', credentials_profile_name=None, content_handler=<__main__.ContentHandler object at 0x7f24ec559d60>, model_kwargs=None, endpoint_kwargs=None)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -1028,8 +1049,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1037,7 +1060,7 @@
        "'Which instances can I use with Managed Spot Training in SageMaker?'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,8 +1071,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "docs = docsearch.similarity_search(question, k=3)"
@@ -1057,8 +1082,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1068,7 +1095,7 @@
        " Document(page_content='Amazon SageMaker is a fully managed service to prepare data and build, train, and deploy machine learning (ML) models for any use case with fully managed infrastructure, tools, and workflows.: If you have a consistent amount of Amazon SageMaker instance usage (measured in $/hour) and use multiple SageMaker components or expect your technology configuration (such as instance family, or Region) to change over time, SageMaker Savings Plans make it simpler to maximize your savings while providing flexibility to change the underlying technology configuration based on application needs or new innovation. The Savings Plans rate applies automatically to all eligible ML instance usage with no manual modifications required.', metadata={'source': 'rag_data/processed_data.csv', 'row': 149})]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,8 +1106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "prompt_template = \"\"\"Answer based on context:\\n\\n{context}\\n\\n{question}\"\"\"\n",
@@ -1090,8 +1119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "chain = load_qa_chain(llm=sm_llm, prompt=PROMPT)"
@@ -1099,8 +1130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "result = chain({\"input_documents\": docs, \"question\": question}, return_only_outputs=True)[\n",
@@ -1110,8 +1143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1119,7 +1154,7 @@
        "'Amazon EC2 Spot instances'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1777,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.m5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 2.0)",
    "language": "python",
