fixed issue with last example in notebook

--- a/notebooks/03-aws-qna-langchain-rag.ipynb
+++ b/notebooks/03-aws-qna-langchain-rag.ipynb
@@ -927,6 +927,9 @@
     "# Let's try a different question\n",
     "\n",
     "question = \"What is sagemaker?\"\n",
+    "\n",
+    "docs = docsearch.similarity_search(question, k=3)\n",
+    "\n",
     "result = chain({\"input_documents\": docs, \"question\": question}, return_only_outputs=True)[\n",
     "    \"output_text\"\n",
     "]"
