more improvements for endpoint handling

--- a/notebooks/03-aws-qna-langchain-rag.ipynb
+++ b/notebooks/03-aws-qna-langchain-rag.ipynb
@@ -141,16 +141,33 @@
    "source": [
     "LLM_CONFIG = {\n",
     "    'model_id': \"huggingface-text2text-flan-t5-xxl-bnb-int8\",\n",
-    "    'endpoint_name': 'flan-t5-xxl-llm',\n",
+    "    'endpoint_base_name': 'flan-t5-xxl-llm',\n",
     "    \"parse_function\": parse_response_model_flan_t5,\n",
     "    \"prompt\": \"\"\"Answer based on context:\\n\\n{context}\\n\\n{question}\"\"\",\n",
     "}\n",
     "\n",
     "EMBEDDINGS_CONFIG = {\n",
     "    'model_id': \"huggingface-textembedding-gpt-j-6b-fp16\",\n",
-    "    'endpoint_name': 'gpt-j-6b-embeddings',\n",
+    "    'endpoint_base_name': 'gpt-j-6b-embeddings',\n",
     "\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# In cases where the endpoint has aready been created, set the endpoint name here and skip the model corresponding deployment model step(s) that follow\n",
+    "# The cells following model deployment work based on the endpoint names set here\n",
+    "\n",
+    "llm_endpoint_name = LLM_CONFIG[\"endpoint_base_name\"]  + datetime.now().strftime(\"-%Y-%m-%d-%H-%M-%S\")\n",
+    "embeddings_endpoint_name = EMBEDDINGS_CONFIG[\"endpoint_base_name\"] + datetime.now().strftime(\"-%Y-%m-%d-%H-%M-%S\")\n",
+    "\n",
+    "print(f\"llm endpoint: {llm_endpoint_name}, embeddings endpoint: {embeddings_endpoint_name}\")"
    ]
   },
   {
@@ -165,7 +182,6 @@
     "\n",
     "model = JumpStartModel(model_id=LLM_CONFIG['model_id']) \n",
     "LLM_CONFIG['model_name'] = model.name\n",
-    "llm_endpoint_name = LLM_CONFIG[\"endpoint_name\"]\n",
     "\n",
     "print(model)\n",
     "print(datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\") + \" Starting model deployment. This takes around 6 minutes.\")\n",
@@ -195,7 +211,7 @@
     "print(model)\n",
     "print(datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\") + \"Starting model deployment. This takes around 6 minutes.\")\n",
     "\n",
-    "model.deploy(endpoint_name=EMBEDDINGS_CONFIG['endpoint_name'])\n",
+    "model.deploy(endpoint_name=embeddings_endpoint_name)\n",
     "\n",
     "print(f\"\\n{bold}Model {EMBEDDINGS_CONFIG['model_id']} has been deployed successfully.{unbold}{newline}\")\n",
     "print(datetime.now().strftime(\"%Y-%m-%d %H:%M:%S  \") + \"Completed model deployment.\")"
@@ -430,7 +446,7 @@
     "content_handler = ContentHandler()\n",
     "\n",
     "embeddings = SagemakerEndpointEmbeddingsJumpStart(\n",
-    "    endpoint_name=EMBEDDINGS_CONFIG[\"endpoint_name\"],\n",
+    "    endpoint_name=embeddings_endpoint_name,\n",
     "    region_name=aws_region,\n",
     "    content_handler=content_handler,\n",
     ")"
@@ -964,25 +980,29 @@
    },
    "outputs": [],
    "source": [
-    "# Change False to True and re-run this cell when you are finished with the lab and/or want to delete your endpoints\n",
-    "if False:\n",
-    "# if True:\n",
-    "    for config in (LLM_CONFIG, EMBEDDINGS_CONFIG):\n",
-    "        model_name=config[\"model_name\"]\n",
-    "        endpoint_name=config[\"endpoint_name\"]\n",
-    "        client=boto3.client(\"sagemaker\")\n",
-    "        client.delete_model(ModelName=model_name)   \n",
-    "        client.delete_endpoint_config(EndpointConfigName=endpoint_name)\n",
-    "        client.delete_endpoint(EndpointName=endpoint_name)\n",
-    "        print(\"Deleted Model \" + model_name + \"\\nEndpoint \"  + endpoint_name)\n"
+    "for config, endpoint_name in zip((LLM_CONFIG, EMBEDDINGS_CONFIG), (llm_endpoint_name, embeddings_endpoint_name)):\n",
+    "    print(config[\"model_name\"], endpoint_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Change False to True and re-run this cell when you are finished with the lab and/or want to delete your endpoints\n",
+    "if False:\n",
+    "# if True:\n",
+    "    for config, endpoint_name in zip((LLM_CONFIG, EMBEDDINGS_CONFIG), (llm_endpoint_name, embeddings_endpoint_name)):\n",
+    "        model_name=config[\"model_name\"]\n",
+    "        client=boto3.client(\"sagemaker\")\n",
+    "        client.delete_model(ModelName=model_name)   \n",
+    "        client.delete_endpoint_config(EndpointConfigName=endpoint_name)\n",
+    "        client.delete_endpoint(EndpointName=endpoint_name)\n",
+    "        print(\"Deleted Model \" + model_name + \"\\nDeleted Endpoint \"  + endpoint_name)"
+   ]
   }
  ],
  "metadata": {
@@ -1561,7 +1581,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.m5.large",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
